# ruct_asteroid_clone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_run.sh  build_test_and_run.sh  main.c  player.c  ruct_include.h  tests.c  types.h  util.c  world.c
src/: conf.h  main.c  player.c  player.h  ruct_include.h  types.h  util.h  world.c  world.h
test/: tests.c
